// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  <a
    className="sc-bdVaJa RfHPw"
    href="#main-content"
    onClick={[Function]}
    tabIndex={1}
  >
    Skip to Content
  </a>,
  <div
    className="sc-htoDjs kTRGYS"
    id="main-content"
  >
    <div
      className="sc-ifAKCX gjNQMo"
      open={true}
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="sc-EHOje egBNOG"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="sc-bZQynM hPWzGe"
        open={true}
      >
        <nav>
          <ol>
            <li
              className="sc-gzVnrw giQHPi"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="sc-gzVnrw giQHPi"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "page title",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="sc-gzVnrw giQHPi"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "page title2",
                          }
                        }
                        href="/books/book/pages/page2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
    <div
      className="sc-bwzfXH eNgRBe"
    >
      <div>
        <h1
          className="sc-htpNat cOGKiz"
        >
          book title
           / 
          page title
        </h1>
      </div>
      <div
        className="sc-bxivhb fpcskD"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "some page content yo",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  <a
    className="sc-bdVaJa RfHPw"
    href="#main-content"
    onClick={[Function]}
    tabIndex={1}
  >
    Skip to Content
  </a>,
  <div
    className="sc-htoDjs kTRGYS"
    id="main-content"
  >
    <div
      className="sc-ifAKCX gjNQMo"
      open={true}
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="sc-EHOje egBNOG"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="sc-bZQynM hPWzGe"
        open={true}
      >
        <nav>
          <ol>
            <li
              className="sc-gzVnrw giQHPi"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      className="sc-bwzfXH eNgRBe"
    >
      <div />
      <div
        className="sc-bxivhb fpcskD"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
